src/test/ui/associated-types/associated-types-overridden-binding-2.stderr
error[E0271]: type mismatch resolving `<std::vec::IntoIter<u32> as std::iter::Iterator>::Item == i32`
  --> $DIR/associated-types-overridden-binding-2.rs:6:39
   |
LL |     let _: &I32Iterator<Item = u32> = &vec![42].into_iter();
   |                                       ^^^^^^^^^^^^^^^^^^^^^ expected u32, found i32
   |
   = note: expected type `u32`
              found type `i32`
   = note: required for the cast to the object type `dyn I32Iterator<Item = u32, Item = i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
